# Ai-post-generator

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  celery_worker.py  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8913449f03ef_initial.py  bc9416e27a10_align_models.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/ai/: client.py
app/api/: generate.py  keywords.py  posts.py  sources.py
app/news_parser/: rss.py  telegram.py
app/repository/: keyword_repo.py  news_repo.py  post_repo.py
app/services/: filter.py
app/tasks/: parsing.py
app/telegram/: client.py  publisher.py
app/utils/: datetime.py
