[project]
name = "aibot"
version = "0.1.0"
description = ""
authors = [
    {name = "tamirlan1919",email = "tchinchaev@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "lxml (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
